Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.29.0
-
None
Description
When paring an incoming ATTACH frame for a transaction coordinator Proton does not correctly retrieve the coordinator target's capabilities field.
Here's a trace from qpid-dispatch servicing a request between tx_send.py and artemis:
This attach frame arrives from tx_send.py:
2019-11-20 11:39:25.133485 -0500 SERVER (trace) [2]:FRAME: 0 <- @attach(18) [name="txn-ctrl", handle=1, role=false, snd-settle-mode=2, rcv-settle-mode=0, source=@source(40) [durable=0, timeout=0, dynamic=false], target=@coordinator(48) [capabilities=:"amqp:local-transactions"], initial-delivery-count=0]
Note the " [capabilities=:"amqp:local-transactions"]" in the target.
On dispatch attempting to retrieve the target's capabilities return no data:
2019-11-20 11:39:25.133710 -0500 ROUTER (info) KAG: qdr-target=