PROTON-2138: properly parse the remote terminus properties

The coordinator terminus only has a capabilities field.  This is
different from the tranditional endpoint attach frame and must be
handled appropriately.

This closes #209